downgrade tests to java 11